@@ -1,5 +1,14 @@
 2008-08-25  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/useradd.c: Harmonize some error messages.
+	* src/userdel.c: Add log to syslog when the mail file could not be
+	removed.
+	* src/userdel.c: Give more context an error message (merge with
+	perror()).
+	* src/usermod.c: Harmonize some error messages.
+
+2008-08-25  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/groupmems.c: Check the return value of gr_update().
 	* src/chage.c, src/chfn.c, src/chgpasswd.c, src/chpasswd.c,
 	src/chsh.c, src/gpasswd.c, src/groupadd.c, src/groupmems.c,
